2008-07-21  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/node.py: Fixed highlighting in composited 
	environments.

2008-07-20  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* debian/changelog: Updated for 1.3.5 release.

	* pyreqs.py: Changed pyatspi version checking to use the new
	__version__ symbol.

2008-07-08  Eitan Isaacson  <eitan@ascender.com>

	* accerciser.schemas.in: 
	* debian/changelog: 
	* debian/rules: 
	* src/lib/accerciser/accessible_treeview.py: 
	* src/lib/accerciser/node.py: 
	* src/lib/accerciser/prefs_dialog.py: 
	* src/lib/accerciser/tools.py: Added new highlight features and 
	eye-candy. Updated debian dirs.

	* src/lib/accerciser/accessible_treeview.py: 
	* src/lib/accerciser/main_window.py: 
	* src/lib/accerciser/plugin/plugin_manager.py: 
	* src/lib/accerciser/tools.py: 
	* src/lib/accerciser/ui_manager.py: Added a context menu to the
	main tree.

2008-07-02  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accessible_treeview.py: Fixed
	UnboundLocalError (bug #540166).

2008-06-16  Eitan Isaacson  <eitan@ascender.com>

	* confugure.in: Set trunk version to 1.3.5.
	
	* NEWS: 
	* confugure.in:
	* README: Updated to version 1.3.4.

2008-06-12  Eitan Isaacson  <eitan@ascender.com>

	* pyreqs.py: Make pyreqs behave nicely in a headless build
	environment (bug #528828).

	* po/LINGUAS: Fixed build issue - bugs 537272 and 536468. 
	Thanks David Fuereder!

	* accerciser.desktop.in.in: 
	* po/ar.po: 
	* po/bg.po: 
	* po/bn.po: 
	* po/bn_IN.po: 
	* po/ca.po: 
	* po/cs.po: 
	* po/da.po: 
	* po/de.po: 
	* po/dz.po: 
	* po/el.po: 
	* po/en_CA.po: 
	* po/en_GB.po: 
	* po/es.po: 
	* po/fi.po: 
	* po/fr.po: 
	* po/gl.po: 
	* po/gu.po: 
	* po/he.po: 
	* po/hi.po: 
	* po/hu.po: 
	* po/it.po: 
	* po/ja.po: 
	* po/lt.po: 
	* po/lv.po: 
	* po/mk.po: 
	* po/ml.po: 
	* po/nb.po: 
	* po/nl.po: 
	* po/oc.po: 
	* po/or.po: 
	* po/pa.po: 
	* po/pl.po: 
	* po/pt.po: 
	* po/pt_BR.po: 
	* po/ru.po: 
	* po/si.po: 