@@ -1,3 +1,8 @@
+2008-08-04  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/node.py: Removed "finally" block for
+	compatability (bug #545904), thanks Will. Hard code default colors.
+
 2008-07-21  Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/node.py: Fixed highlighting in composited 
